--- a/views/index.dust
+++ b/views/index.dust
@@ -1,10 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>{+title}7th-Degree{/title}</title>
-    <script type="text/javascript" src='/javascripts/utils.js'></script>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    {+http_header/}
+    <title>Dust.js Test</title>
 </head>
 <body>
   <div class="title">{title}</div>
